--- a/client/components/user/User.module.css
+++ b/client/components/user/User.module.css
@@ -1,7 +1,6 @@
 .users {
     display: flex;
-    justify-content: space-between;
+    justify-content: space;
     gap: 2rem;
     margin: 0 20px;
-
 }
