--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -3,6 +3,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+}
+
 .text-center {
   text-align: center;
 }
@@ -18,3 +23,4 @@
 .cursor:hover {
   cursor: pointer;
 }
+
