feat: view business details

--- a/client/pages/business/Business.module.css
+++ b/client/pages/business/Business.module.css
@@ -9,3 +9,13 @@
     border: 1px solid black;
     padding: 2rem;
   }
+
+.businessDetails {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.businessName {
+    word-wrap: wrap;
+}
